# Single-Source-Retrieval

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/routes/: evaluate.py  query.py  suggestions.py  topics.py  tts.py  upload.py
backend/app/services/: document_processor.py  embeddings.py  evaluator.py  rag_pipeline.py  reranker.py
backend/app/utils/: retry.py
backend/tests/: test_api.py
frontend/: .env.local.example  Dockerfile  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/__tests__/: quizParser.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AudioControls.tsx  ChatInterface.tsx  MessageBubble.tsx  ParticleBackground.tsx  QuizCard.tsx  SuggestionChips.tsx  TopicsSidebar.tsx  UploadZone.tsx
frontend/src/hooks/: useSpeechRecognition.ts  useTextToSpeech.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
